Split REST endpoint classify into two endpoints.
